<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">


	<EditText
		android:id="@+id/sres"
		android:layout_width="359dp"
		android:layout_height="65dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="12dp"
		android:layout_marginRight="12dp"
		android:background="#FFFFFF"
		android:ems="10"
		android:gravity="start|top"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/textView4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		tools:visibility="visible" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="141dp"
		android:layout_height="24dp"
		android:layout_marginBottom="600dp"
		android:text="@string/sies_hospital"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="106dp"
		android:layout_height="28dp"
		android:layout_marginStart="64dp"
		android:layout_marginLeft="64dp"
		android:layout_marginTop="24dp"
		android:text="@string/dr_g_saiprasad"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		app:layout_constraintVertical_bias="0.045" />

	<View
		android:id="@+id/divider"
		android:layout_width="360dp"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.764"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView14"
		app:layout_constraintVertical_bias="0.0" />

	<View
		android:id="@+id/divider2"
		android:layout_width="360dp"
		android:layout_height="1dp"
		android:layout_marginTop="24dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.509"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView12"
		app:layout_constraintVertical_bias="0.005" />

	<View
		android:id="@+id/divider3"
		android:layout_width="360dp"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.509"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText9"
		app:layout_constraintVertical_bias="0.019" />

	<View
		android:id="@+id/divider4"
		android:layout_width="360dp"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.705"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText10"
		app:layout_constraintVertical_bias="0.055" />

	<EditText
		android:id="@+id/editText8"
		android:layout_width="356dp"
		android:layout_height="88dp"
		android:layout_marginStart="32dp"
		android:layout_marginLeft="32dp"
		android:layout_marginTop="32dp"
		android:ems="10"
		android:gravity="start|top"
		android:inputType="textMultiLine"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.521"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView8"
		app:layout_constraintVertical_bias="0.0"
		tools:ignore="LabelFor" />

	<View
		android:id="@+id/pres"
		android:layout_width="409dp"
		android:layout_height="1dp"
		android:layout_marginTop="32dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText8"
		app:layout_constraintVertical_bias="0.081" />

	<TextView
		android:id="@+id/diagnosis"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginLeft="36dp"
		android:layout_marginTop="24dp"
		android:text="@string/diagnosis"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider3"
		app:layout_constraintVertical_bias="0.007" />

	<TextView
		android:id="@+id/symptoms"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="36dp"
		android:layout_marginLeft="36dp"
		android:layout_marginTop="16dp"
		android:text="@string/symptoms"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider2"
		app:layout_constraintVertical_bias="0.012" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/rx"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.114"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider4"
		app:layout_constraintVertical_bias="0.027" />

	<EditText
		android:id="@+id/editText9"
		android:layout_width="270dp"
		android:layout_height="42dp"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toEndOf="@+id/symptoms"
		app:layout_constraintTop_toBottomOf="@+id/divider2"
		app:layout_constraintVertical_bias="0.009"
		tools:ignore="LabelFor" />

	<EditText
		android:id="@+id/editText10"
		android:layout_width="283dp"
		android:layout_height="42dp"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.571"
		app:layout_constraintStart_toEndOf="@+id/diagnosis"
		app:layout_constraintTop_toBottomOf="@+id/divider3"
		app:layout_constraintVertical_bias="0.0"
		tools:ignore="LabelFor" />

	<EditText
		android:id="@+id/patient_details"
		android:layout_width="252dp"
		android:layout_height="42dp"
		android:layout_marginTop="32dp"
		android:ems="10"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.656"
		app:layout_constraintStart_toEndOf="@+id/textView12"
		app:layout_constraintTop_toBottomOf="@+id/divider"
		app:layout_constraintVertical_bias="0.0"
		tools:ignore="LabelFor" />

	<TextView
		android:id="@+id/textView12"
		android:layout_width="91dp"
		android:layout_height="19dp"
		android:layout_marginStart="36dp"
		android:layout_marginLeft="36dp"
		android:layout_marginTop="36dp"
		android:text="@string/patient_details"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider"
		app:layout_constraintVertical_bias="0.007" />

	<TextView
		android:id="@+id/textView13"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:text="@string/_91_88888_88888"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.96"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		app:layout_constraintVertical_bias="0.007" />

	<TextView
		android:id="@+id/textView14"
		android:layout_width="162dp"
		android:layout_height="18dp"
		android:layout_marginTop="12dp"
		android:text="@string/dr_saiprasad_sieshospital_in"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.987"
		app:layout_constraintStart_toEndOf="@+id/textView5"
		app:layout_constraintTop_toBottomOf="@+id/textView13"
		app:layout_constraintVertical_bias="0.021" />

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="36dp"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="68dp"
		android:layout_marginRight="68dp"

		android:text="@string/analyze"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pres"
		app:layout_constraintVertical_bias="0.058" />

	<ImageView
		android:id="@+id/btnSpeak"
		android:layout_width="46dp"
		android:layout_height="39dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="28dp"
		android:layout_toStartOf="@+id/button"
		android:layout_toLeftOf="@+id/button"
		android:contentDescription="@string/todo"
		android:gravity="center"
		android:onClick="getSpeechInput"
		android:src="@drawable/ic_mic"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/button"
		app:layout_constraintHorizontal_bias="0.468"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pres"
		app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>





